--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "start": "node ./src/service/service.js",
     "server": "nodemon ./src/service/service.js --server 3000",
     "start-front-server": "nodemon ./src/express/index.js",
-    "test": "npm run eslint",
+    "jest": "jest",
+    "test": "npm run eslint && npm run test::rest",
+    "test::rest": "jest --testPathPattern=src/service/api/tests",
     "eslint": "eslint --ext .js src/"
   },
   "repository": {
@@ -23,7 +25,9 @@
   "devDependencies": {
     "eslint": "6.8.0",
     "eslint-config-htmlacademy": "0.5.2",
-    "nodemon": "2.0.2"
+    "jest": "26.6.1",
+    "nodemon": "2.0.2",
+    "supertest": "5.0.0"
   },
   "dependencies": {
     "chalk": "3.0.0",
