--- a/package.json
+++ b/package.json
@@ -32,9 +32,11 @@
     "supertest": "5.0.0"
   },
   "dependencies": {
+    "axios": "0.21.0",
     "chalk": "3.0.0",
     "cross-env": "7.0.2",
     "express": "4.17.1",
+    "multer": "1.4.2",
     "nanoid": "3.1.7",
     "pino": "6.7.0",
     "pug": "2.0.4"
