--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "«Типотека»",
   "main": "./src/service/service.js",
   "scripts": {
-    "start": "cross-env LOG_LEVEL=error NODE_ENV=production node ./src/service/service.js --server 3000",
-    "start::debug": "cross-env LOG_LEVEL=debug NODE_ENV=development node ./src/service/service.js --server 3000",
+    "start": "cross-env LOG_LEVEL=error NODE_ENV=production node -r dotenv/config ./src/service/service.js --server 3000",
+    "start::debug": "cross-env LOG_LEVEL=debug NODE_ENV=development node -r dotenv/config ./src/service/service.js --server 3000",
     "server": "nodemon ./src/service/service.js --server 3000",
     "start-front-server": "nodemon ./src/express/index.js",
     "jest": "jest",
@@ -35,10 +35,13 @@
     "axios": "0.21.0",
     "chalk": "3.0.0",
     "cross-env": "7.0.2",
+    "dotenv": "8.2.0",
     "express": "4.17.1",
     "multer": "1.4.2",
     "nanoid": "3.1.7",
+    "pg": "8.5.1",
     "pino": "6.7.0",
-    "pug": "2.0.4"
+    "pug": "2.0.4",
+    "sequelize": "6.5.1"
   }
 }
