--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "nanoid": "3.1.7",
     "pg": "8.5.1",
     "pino": "6.7.0",
-    "pug": "2.0.4",
+    "pug": "^3.0.2",
     "sequelize": "6.5.1"
   }
 }
