--- a/package.json
+++ b/package.json
@@ -34,10 +34,12 @@
   },
   "dependencies": {
     "axios": "0.21.0",
+    "body-parser": "1.19.0",
     "chalk": "3.0.0",
     "cross-env": "7.0.2",
     "dotenv": "8.2.0",
     "express": "4.17.1",
+    "joi": "17.4.0",
     "multer": "1.4.2",
     "nanoid": "3.1.7",
     "pg": "8.5.1",
