Add concurrently & update scripts

--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "description": "«Типотека»",
   "main": "./src/service/service.js",
   "scripts": {
-    "start": "cross-env LOG_LEVEL=error NODE_ENV=production node -r dotenv/config ./src/service/service.js --server 3000",
-    "start::debug": "cross-env LOG_LEVEL=debug NODE_ENV=development node -r dotenv/config ./src/service/service.js --server 3000",
-    "server": "nodemon ./src/service/service.js --server 3000",
+    "start": "npm run start-servers",
+    "start-servers": "concurrently \"npm run start-back-server\" \"npm run start-front-server\"",
+    "start-back-server": "cross-env LOG_LEVEL=error NODE_ENV=production node -r dotenv/config ./src/service/service.js --server 3000",
+    "start-back-server::debug": "cross-env LOG_LEVEL=debug NODE_ENV=development node -r dotenv/config ./src/service/service.js --server 3000",
     "start-front-server": "nodemon -r dotenv/config ./src/express/index.js",
     "jest": "jest",
     "test": "npm run eslint && npm run test::rest",
@@ -37,6 +38,7 @@
     "bcrypt": "5.0.1",
     "body-parser": "1.19.0",
     "chalk": "3.0.0",
+    "concurrently": "7.0.0",
     "connect-session-sequelize": "7.1.1",
     "cross-env": "7.0.2",
     "csurf": "1.11.0",
