--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "pg": "8.5.1",
     "pino": "6.7.0",
     "pug": "^3.0.2",
-    "sequelize": "6.5.1"
+    "sequelize": "6.5.1",
+    "socket.io": "4.4.1"
   }
 }
